# articles_api

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 5e253775547a_initial.py  dbbdfc2cd3cf_initial.py  ed22aef854f0_initial.py
articles_api/: main.py
articles_api/api/: admin.py  articles.py  commentaries.py  dependencies.py  login.py  moderator.py  router.py  users.py
articles_api/config/: config.py
articles_api/core/: auth.py  enums.py  mapping.py  schemas.py  security.py
articles_api/db/: crud.py  database.py  models.py
tests/: test_articles_api.py
